<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical"
    android:padding="@dimen/doub_grid_size"
    tools:context=".RegisterStudentActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/doub_grid_size"
        android:text="@string/add_new_student"
        android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
        android:textColor="@color/textSecondary"
        android:textAllCaps="true" />

    <EditText
        android:id="@+id/edit_text_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/student_name_hint"
        android:importantForAutofill="no"
        android:inputType="textPersonName|textCapWords"
        android:maxLines="1" />

    <Button
        android:id="@+id/button_add"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginTop="@dimen/base_grid_size"
        android:text="@string/add_student" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/doub_grid_size"
        android:layout_marginBottom="@dimen/base_grid_size"
        android:text="@string/registered_students"
        android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
        android:textColor="@color/textSecondary"
        android:textAllCaps="true" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:id="@+id/registered_students_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" />

    </ScrollView>

</LinearLayout>
