<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/doub_grid_size">

        <TextView
            android:id="@+id/text_app_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            android:textColor="@color/colorPrimary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/text_date"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="@color/textSecondary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_app_title"
            tools:text="Monday, Jan 1 2025" />

        <!-- Total Students card -->
        <LinearLayout
            android:id="@+id/card_total"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/doub_grid_size"
            android:layout_marginEnd="@dimen/base_grid_size"
            android:background="@drawable/bg_card_primary"
            android:elevation="4dp"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="@dimen/doub_grid_size"
            app:layout_constraintEnd_toStartOf="@id/card_present"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_date">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/total_students"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textColor="#FFFFFF" />

            <TextView
                android:id="@+id/text_total_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                android:textColor="#FFFFFF"
                android:textStyle="bold"
                tools:text="12" />

        </LinearLayout>

        <!-- Present Count card with badge -->
        <LinearLayout
            android:id="@+id/card_present"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/doub_grid_size"
            android:layout_marginStart="@dimen/base_grid_size"
            android:background="@drawable/bg_card_present"
            android:elevation="4dp"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="@dimen/doub_grid_size"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/card_total"
            app:layout_constraintTop_toBottomOf="@id/text_date">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/present_today"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textColor="#FFFFFF" />

            <!-- Badge showing present count -->
            <TextView
                android:id="@+id/text_present_count"
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:layout_marginTop="4dp"
                android:background="@drawable/bg_count_badge"
                android:gravity="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Headline"
                android:textColor="@color/colorPresent"
                android:textStyle="bold"
                tools:text="8" />

        </LinearLayout>

        <TextView
            android:id="@+id/text_students_header"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/doub_grid_size"
            android:text="@string/students"
            android:textAllCaps="true"
            android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
            android:textColor="@color/textSecondary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/card_present" />

        <LinearLayout
            android:id="@+id/student_list_container"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/base_grid_size"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_students_header" />

        <Button
            android:id="@+id/button_register"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/doub_grid_size"
            android:layout_marginEnd="@dimen/base_grid_size"
            android:text="@string/register_students"
            app:layout_constraintEnd_toStartOf="@id/button_kiosk"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/student_list_container" />

        <Button
            android:id="@+id/button_kiosk"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/doub_grid_size"
            android:layout_marginStart="@dimen/base_grid_size"
            android:text="@string/start_attendance"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/button_register"
            app:layout_constraintTop_toBottomOf="@id/student_list_container" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>

